force-app/main/default/objects/Block__c/fields/Block_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Block_Unique_Id__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Block Unique Id</label>
    <type>Text</type>
</CustomField>