force-app/main/default/objects/Block__c/fields/Discount_Rate_per_sqft__c.field-meta.xml
<CustomField>
    <fullName>Discount_Rate_per_sqft__c</fullName>
    <label>Discount (Rate per sqft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>