force-app/main/default/objects/Block__c/fields/Sub_Tower__c.field-meta.xml
<CustomField>
    <fullName>Sub_Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Towers</label>
    <referenceTo>Block__c</referenceTo>
    <relationshipLabel>Blocks</relationshipLabel>
    <relationshipName>Blocks</relationshipName>
    <type>Lookup</type>
</CustomField>